--- a/landing_page/landing_page/styles.css
+++ b/landing_page/landing_page/styles.css
@@ -15,12 +15,17 @@ body {
     list-style: none;
     margin: 10px;
     height: 75px;
+    color: white;
+}
+
+a {
+    color: white;
 }
 
 .logo {
     margin-top: 0;
     margin-left: 5px;
-    font-size: 75px;
+    font-size: 40px;
     font-weight: bolder;
 }
 
@@ -216,6 +221,7 @@ body {
     height: 300px ;
     align-items: center;
     justify-content: center;
+    background-color: white;
 }
 
 .box {
@@ -261,4 +267,14 @@ body {
     border-style: solid;
     width:110px;
     height: 35px;
+}
+
+/* Footer */
+
+.footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #1F2937;
+    color: white;
 }
